<resources>

    <string name="app_name">Write a Question, Get an Answer!</string>
    <string name="app_name2">Dental-Ask</string>
    <string name="promp_user">User</string>
    <string name="promp_username">Username</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_question">Make a question</string>
    <string name="hint_answer">Comment</string>
    <string name="publish">Post</string>
    <string name="picture">Pic</string>
    <string name="answer">Answer</string>
    <string name="answers">Answers</string>
    <string name="questions">Questions</string>
    <string name="refresh">Refresh</string>
    <string name="image">Pictures</string>
    <string name="tooth">Tooth</string>
    <string name="title_question">Questions</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_titles">Title(s)</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

</resources>
