<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
	android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mysqlconnection.MainActivity"
    tools:ignore="MergeRootFrame">

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promp_username"
                
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
               
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
               
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_lastname"
               
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
               	android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <RelativeLayout
                style="@style/LoginFormContainer"
            	android:orientation="vertical" >
            
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/register" />
            
            
            
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</merge>
